✨ Se agrega modal a cards de portafolio

--- a/src/components/atoms/Loader/LoaderTerminal.astro
+++ b/src/components/atoms/Loader/LoaderTerminal.astro
@@ -12,7 +12,7 @@
         <div class="control maximize"></div>
       </div>
     </div>
-    <div class="text">Loading...</div>
+    <div class="text"><slot/></div>
   </div>
 
 
