--- a/src/components/organisms/Skills/_skills.scss
+++ b/src/components/organisms/Skills/_skills.scss
@@ -8,11 +8,13 @@
   display: flex;
   justify-content: center;
   writing-mode: horizontal-tb;
-  padding-block: 20rem;
+  padding-block: 30rem;
   min-height: 100dvh;
+
   @include respond-to("medium") {
     padding-block: 10rem;
   }
+
   &__container {
     @include centerFlex(center, flex-start);
     flex-direction: column;
@@ -25,13 +27,16 @@
       align-self: center;
       max-width: 950px;
       gap: 7rem;
+
       @include respond-to("medium") {
         flex-wrap: wrap-reverse;
       }
+
       .skills__textos {
         max-width: 62rem;
         width: 100%;
       }
+
       .skills__description {
         @include font-family("textos");
         color: #f1f1f1;
@@ -42,10 +47,12 @@
         white-space: pre-line;
         margin-bottom: 1rem;
       }
+
       .skills__description--subtitle {
         font-weight: bold;
         @include text-gradient("dark");
       }
+
       .skills__avatar__container {
         position: relative;
         flex-shrink: 1;
@@ -53,23 +60,32 @@
     }
   }
 }
+
 .skills__popup {
-  bottom: 78%;
-  left: 50%;
+  width: max-content;
+  max-width: 54rem;
+  bottom: 97%;
+  left: 60%;
   z-index: 200;
   transform: translateX(-50%);
   position: absolute;
   opacity: 0;
   transition: opacity 0.4s ease;
-  .skills__terminal__content{
+
+  .skills__terminal__content {
+    padding: .4rem;
+    ;
     white-space: pre-line;
+    @include typography(1.6rem, 1.5, 400);
     @include font-family("fira-code");
   }
-  @include respond-to("medium"){
-    .skills__popup{
+
+  @include respond-to("medium") {
+    .skills__popup {
       bottom: 67%;
     }
-    .skills__terminal__content{
+
+    .skills__terminal__content {
       font-size: 1.7rem;
     }
   }
@@ -86,11 +102,38 @@
   justify-content: center;
   max-width: 100%;
   margin-top: 5rem;
+
   h2 {
     margin-left: 22rem;
+
     @include respond-to("medium") {
       margin: 0;
       text-align: center;
     }
+  }
+}
+
+.cursor {
+  margin-left: .4rem;
+  border-right: 3px solid;
+  width: 100%;
+  animation:
+
+    cursor .4s step-end infinite alternate;
+
+}
+
+@keyframes cursor {
+
+  50% {
+    border-color: transparent;
+  }
+}
+
+/*  animation typing effect*/
+
+@keyframes typing {
+  from {
+    width: 0;
   }
 }
