--- a/src/components/molecules/Footer/_footer.scss
+++ b/src/components/molecules/Footer/_footer.scss
@@ -2,10 +2,28 @@
 @use "@sass/variables" as *;
 
 .footer{
-    @include centerFlex(space-between);
-    padding: 3rem ;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 100%;
+    padding: 3rem  10rem;
     background: var(--black);
     min-height: 15dvh;
+    color: white;
+    &__container{
+        @include centerFlex(space-between, start);
+
+
+    }
+    &__links{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        &__title{
+         font-size: 2.4rem;
+         color:white;
+        }
+    }
     &__list{
         display: flex;
         flex-direction: column;
@@ -21,5 +39,13 @@
     @media screen and (max-width: 728px) {
         flex-direction: column;
         gap: 2rem;
+    }
+    &__credits{
+        color: white;
+        @include centerFlex(start);
+        gap: 1rem;
+    }
+    &__copy{
+        font-size: 1.28rem;
     }
 }
