--- a/src/components/molecules/Footer/_footer.scss
+++ b/src/components/molecules/Footer/_footer.scss
@@ -1,51 +1,80 @@
 @use "@sass/mixins" as *;
 @use "@sass/variables" as *;
 
-.footer{
+.footer {
     display: flex;
     flex-direction: column;
     gap: 2rem;
     width: 100%;
-    padding: 3rem  10rem;
+    padding: 3rem 10rem;
     background: var(--black);
     min-height: 15dvh;
     color: white;
-    &__container{
+
+    &__container {
         @include centerFlex(space-between, start);
-
-
+        flex-wrap: wrap;
     }
-    &__links{
+
+
+
+
+    &__links {
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        &__title{
-         font-size: 2.4rem;
-         color:white;
-        }
-    }
-    &__list{
-        display: flex;
-        flex-direction: column;
-        gap:1rem;
-    }
-    &__link{
-        color: $ufo-green;
-        &:hover{
+
+        &__title {
+            font-size: 2.2rem;
             color: white;
         }
     }
 
-    @media screen and (max-width: 728px) {
+    &__list {
+        display: flex;
         flex-direction: column;
-        gap: 2rem;
+        gap: 1rem;
     }
-    &__credits{
-        color: white;
+
+    &__link {
+        color: $ufo-green;
+
+        &:hover {
+            color: white;
+        }
+    }
+    &__credits {
+
         @include centerFlex(start);
         gap: 1rem;
     }
-    &__copy{
+
+
+
+    &__copy {
         font-size: 1.28rem;
+    }
+}
+
+@include respond-to("medium") {
+
+    .footer {
+        padding: 3rem 2rem;
+
+        &__credits {
+            @include centerFlex(center, center);
+            text-align: center;
+        }
+
+        &__link {
+            flex-direction: column;
+            gap: 2rem;
+        }
+
+        &__container {
+            flex-direction: column;
+            align-items: center;
+            gap: 2rem;
+        }
     }
 }
