--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ export const prerender = true;
   <!-- <Portfolio /> -->
   <Portfolio cardsLength={3} server:defer />
   <DividerBottom fill="shape-fill-3" />
-  <Social />
+  <Social server:defer/>
   <Footer />
 </Layout>
 <ToastNotification />
